# Nomad

./: .clang-format  .clang-tidy  .clangd  InstallStep1.sh  README.md  Startover.sh
harmonic_balance/: CMakeLists.txt  FixedStepIntegrator.cpp  FixedStepIntegrator.hpp  FourierAnalysis.cpp  FourierCoefficients.cpp  FourierCoefficients.hpp  HB.cpp  HB.hpp  HBCase.cpp  HarmonicBalanceTest.cpp  Helper.sh  IntegratorTest.cpp  Operators.cpp  Operators.hpp  README.md  SpaceTimeTransient.cpp  SpaceTimeTransient.hpp  TemporalParameters.hpp  TestOperators.cpp  Tests.cpp  Tests.hpp  main.cpp  matrix2x2.cpp  matrix2x2.hpp  smp.cpp  smp.hpp
matrix_computations/: CMakeLists.txt  Helper.sh  QRdecomposition.cpp  QRdecomposition.hpp  README.md  applyQ.cpp  applyQT.cpp  getSquareUpperTri.cpp  getSquareUpperTri.hpp  hqr2.cpp  main.cpp  matrixCollection.cpp  matrixCollection.hpp  qrTest.cpp  qrTest.hpp  strideTest.cpp  stridedInnerProduct.hpp  stridedInnerProductTest.cpp  testDecomposition.cpp  testDecomposition.hpp  triSolTest.cpp  triuSol.cpp  triuSol.hpp  util.cpp  util.hpp
